ensure that buttons disappear on mobile

--- a/css/tabby.css
+++ b/css/tabby.css
@@ -156,6 +156,10 @@ section {
 		margin-top:3.5rem;
 	}
 
+	.responsive-tabs ul.responsive-tabs__list {
+		display:none;
+	}
+
 	h1.entry-title {
 	    font-size: 3rem;
 	}
